--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.1
   get: ^4.5.1
@@ -63,6 +59,7 @@ flutter:
   assets:
        - assets/images/noun-target-money-4380518-2.png
        - assets/images/noun-curved-arrow-3067940-2.png
+       - assets/images/bookwriting.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,7 +76,7 @@ flutter:
   fonts:
       - family: customfont
         fonts:
-         - asset: /Users/user/Desktop/hisab kitab/app/assets/fonts/Oswald-VariableFont_wght.ttf
+         - asset: assets/fonts/Oswald-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
