--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.1
   get: ^4.5.1
+  rolling_switch: ^0.0.2
 
 dev_dependencies:
   flutter_test:
