--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.1
-  get: ^4.5.1
-  rolling_switch: ^0.0.2
+  get: ^4.3.8
+  nepali_date_picker: ^5.2.0
 
 dev_dependencies:
   flutter_test:
