--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,19 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_screenutil: ^5.0.1
+  flutter_screenutil: ^5.0.1  
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
   get: ^4.3.8
   nepali_date_picker: ^5.2.0
+  connectivity_plus: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  build_runner: ^2.1.7
+  hive_generator: ^1.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
