--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.3.8
   nepali_date_picker: ^5.2.0
   connectivity_plus: ^2.2.0
+  percent_indicator: ^4.0.0
 
 dev_dependencies:
   flutter_test:
