lend entry page setup !

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
        - assets/images/noun-target-money-4380518-2.png
        - assets/images/noun-curved-arrow-3067940-2.png
        - assets/images/bookwriting.png
+       - assets/images/borrow.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
