--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   firebase_core: ^1.16.0
   cloud_firestore: ^3.1.14
   flutterfire_ui: ^0.4.0+5
-
+  bottom_navy_bar: ^6.0.0
   
 dev_dependencies:
   flutter_test:
