--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^3.1.14
   flutterfire_ui: ^0.4.0+5
   bottom_navy_bar: ^6.0.0
+  visibility_detector: any
   
 dev_dependencies:
   flutter_test:
